...
                ),
              ),
              child: TabBar(
                controller: _tabController,
                tabs: [
                  Tab(
                    key: const Key('keyTabOrganize'),
                    icon: Icon(
                      _tabController.index == 0
                          ? Icons.category
                          : Icons.category_outlined,
                    ),
                  ),
                  Tab(
                    key: const Key('keyTabFolder'),
                    icon: Icon(
                      _tabController.index == 1
                          ? Icons.folder
                          : Icons.folder_outlined,
                    ),
                  ),
                  Tab(
                    key: const Key('keyTabGit'),
                    icon: Icon(
                      _tabController.index == AppPanelIndex.git
                          ? Icons.commit
                          : Icons.commit_outlined,
                    ),
                  ),
...
                      _tabController.index == AppPanelIndex.run
                          ? Icons.play_arrow
                          : Icons.play_arrow_outlined,
                    ),
                  ),
                  Tab(
                    key: const Key('keyTabTest'),
                    icon: Icon(
                      _tabController.index == AppPanelIndex.test
                          ? Icons.check_circle
                          : Icons.check_circle_outlined,
                    ),
                  ),
...
